<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_white_0"
    tools:context=".VerificationActivity">

  <ImageView
      android:id="@+id/newPasswordBackImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="30dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_arrow_back" />

  <TextView
      android:id="@+id/textView4"
      style="@style/headline_700"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="82dp"
      android:text="@string/createNewPassword"
      android:textColor="@color/black_dark_900"

      app:layout_constraintStart_toStartOf="@+id/PasswordInputLayout"
      app:layout_constraintTop_toBottomOf="@+id/newPasswordBackImage" />

  <TextView
      android:id="@+id/textView5"
      style="@style/body_text_300"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/forgot_pass"
      android:textColor="@color/black_light_400"
      app:layout_constraintBottom_toTopOf="@+id/textView4"
      app:layout_constraintStart_toStartOf="@+id/textView4" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/PasswordInputLayout"
      style="@style/input_field"
      android:layout_width="343dp"
      android:layout_height="64dp"
      android:layout_marginStart="34dp"
      android:layout_marginEnd="34dp"
      android:layout_marginBottom="24dp"
      android:hint="@string/NewPassword"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/ConfirmPasswordInputLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/black_light_400">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newPasswordInput"
        style="@style/input_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/ConfirmPasswordInputLayout"
      style="@style/input_field"
      android:layout_width="343dp"
      android:layout_height="64dp"
      android:hint="@string/RepeatPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/black_light_400">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newConfirmPasswordInput"
        style="@style/input_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/textView3"
      style="@style/body_text_100"
      android:layout_width="343dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/PasswordRequire"
      android:textColor="@color/black_light_300"
      app:layout_constraintStart_toStartOf="@+id/ConfirmPasswordInputLayout"
      app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordInputLayout" />

  <Button
      android:id="@+id/newPasswordSaveBtn"
      style="@style/main_button"
      android:layout_width="match_parent"
      android:layout_height="58dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="20dp"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>