<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgotPasswordEmailInputLayout"
        style="@style/input_field"
        android:layout_width="343dp"
        android:layout_height="64dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPasswordEmailInput"
            style="@style/input_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotPasswordSubmitBtn"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/forgotPasswordBackImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />



    <TextView
        android:id="@+id/textView4"
        style="@style/headline_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="82dp"
        android:text="@string/forgot_your_pass"
        android:textColor="@color/black_dark_900"
        app:layout_constraintStart_toStartOf="@+id/ForgotPasswordEmailInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBackImage" />

    <TextView
        android:id="@+id/textView5"
        style="@style/body_text_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/input_your_email"
        android:textColor="@color/black_light_400"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>