<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_white_0"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/NewPasswordBackImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="30dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_arrow_back" />

  <TextView
      android:id="@+id/textView4"
      style="@style/headline_700"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="82dp"
      android:text="@string/WhatIsYourName"
      android:textColor="@color/black_dark_900"

      app:layout_constraintStart_toStartOf="@+id/RegFirstNameInputLayout"
      app:layout_constraintTop_toBottomOf="@+id/NewPasswordBackImage" />

  <TextView
      android:id="@+id/textView5"
      style="@style/body_text_300"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/createAccount"
      android:textColor="@color/black_light_400"
      app:layout_constraintBottom_toTopOf="@+id/textView4"
      app:layout_constraintStart_toStartOf="@+id/textView4" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/RegFirstNameInputLayout"
      style="@style/input_field"
      android:layout_width="343dp"
      android:layout_height="64dp"
      android:layout_marginBottom="24dp"
      android:hint="@string/FirstName"
      app:layout_constraintBottom_toTopOf="@+id/RegLastNameInputLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/RegFirstNameInput"
        style="@style/input_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/RegLastNameInputLayout"
      style="@style/input_field"
      android:layout_width="343dp"
      android:layout_height="64dp"
      android:hint="@string/LastName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/RegLastNameInputInput"
        style="@style/input_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/SaveNewPasswordBtn"
      style="@style/main_button"
      android:layout_width="match_parent"
      android:layout_height="58dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="20dp"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:progress="25"
      android:progressBackgroundTint="#00000000"
      android:progressTint="@color/black_dark_900"
      app:layout_constraintBottom_toTopOf="@+id/SaveNewPasswordBtn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>