<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_white_0"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/verificationBackBtn"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView4"
        style="@style/headline_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="82dp"
        android:text="@string/Verification"
        android:textColor="@color/black_dark_900"
        app:layout_constraintStart_toStartOf="@+id/verificationCodePinView"
        app:layout_constraintTop_toBottomOf="@+id/verificationBackBtn" />

    <com.chaos.view.PinView
        android:id="@+id/verificationCodePinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:fontFamily="@font/inter_regular"
        android:inputType="number"
        android:itemBackground="#00FFFFFF"
        android:textColor="@color/black_dark_900"
        android:textSize="14sp"
        app:cursorColor="@color/brand_default_500"
        app:itemHeight="56dp"
        app:itemRadius="15dp"
        app:itemSpacing="12dp"
        app:itemWidth="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineColor="@color/black_light_200" />

    <TextView
        android:id="@+id/textView5"
        style="@style/body_text_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/createAccount"
        android:textColor="@color/black_light_400"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <Button
        android:id="@+id/verificationSaveBtn"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:progress="100"
        android:progressBackgroundTint="#00000000"
        android:progressTint="@color/black_dark_900"
        app:layout_constraintBottom_toTopOf="@+id/verificationSaveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/body_text_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/timer"
        android:textColor="@color/black_light_400"
        app:layout_constraintEnd_toEndOf="@+id/verificationCodePinView"
        app:layout_constraintTop_toBottomOf="@+id/verificationCodePinView" />

    <TextView
        android:id="@+id/textView9"
        style="@style/body_text_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/CodeReload"
        android:textColor="@color/black_light_400"
        app:layout_constraintStart_toStartOf="@+id/verificationCodePinView"
        app:layout_constraintTop_toBottomOf="@+id/verificationCodePinView" />

</androidx.constraintlayout.widget.ConstraintLayout>